Se solucionaron problemas relacionados con la gestión de memoria