@@ -1,9 +1,6 @@
 #!/bin/bash
 
-export JAVA_HOME=${JAVA_HOME}
-export HADOOP_CLIENT_OPTS="-Xmx1G \${HADOOP_CLIENT_OPTS}"
-export HADOOP_OPTS="\${HADOOP_OPTS}"
-
+export HADOOP_OPTS="--add-opens=java.base/java.lang=ALL-UNNAMED"
 # --- Configuración de RAM para Daemons de HDFS ---
 # 1 GB para el NameNode
 export HADOOP_NAMENODE_HEAPSIZE=1024
@@ -15,9 +12,3 @@ export HADOOP_DATANODE_HEAPSIZE=1024
 export YARN_RESOURCEMANAGER_HEAPSIZE=1024
 # 1 GB para cada NodeManager
 export YARN_NODEMANAGER_HEAPSIZE=1024
-
-export HDFS_NAMENODE_USER=hdadmin
-export HDFS_DATANODE_USER=hdadmin
-export HDFS_SECONDARYNAMENODE_USER=hdadmin
-export YARN_RESOURCEMANAGER_USER=hdadmin
-export YARN_NODEMANAGER_USER=hdadmin
